Fixing scrollbar; Adding animation config support

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -29,6 +35,16 @@ body {
 
 .fill-v {
     height: 100%;
+}
+
+.scroll-container {
+    height: calc(100vh - 20px);
+    overflow-y: auto;
+}
+
+.explorer-section {
+    max-height: calc(50vh - 50px);
+    overflow-y: auto;
 }
 
 /* Loading Spinner Refinements */
